--- a/register.html
+++ b/register.html
@@ -121,15 +121,15 @@
         </div>
 
         <div class="col-md-4">
-          <label for="state" class="form-label"><b>State</b></label>
-          <select class="form-select" id="state" required>
+          <label for="status" class="form-label"><b>Status</b></label>
+          <select class="form-select" id="status" required>
             <option value="">Choose...</option>
             <option>Single</option>
             <option>Double</option>
             <option>Complicated</option>
           </select>
           <div class="invalid-feedback">
-            Please provide a valid state.
+            Please provide a valid status.
           </div>
         </div>
 
